<resources>
    <string name="app_name">News App</string>
    <string name="api_key" translatable="false">c7d50ff9a01b42a1baa7acc806acd4cf</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
</resources>